# bytardag-pos

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.rst  config.py  docker-compose.yml  entrypoint.sh  noxfile.py  pyproject.toml  wsgi.py
bytardag/: __init__.py  cli.py  decorators.py  filters.py  models.py
bytardag/auth/: __init__.py  forms.py  routes.py
bytardag/main/: __init__.py  forms.py  routes.py
bytardag/static/css/: style.css  style.css.map
bytardag/static/js/: autocomplete.js  entry.js  status.js  verify_sheet.js
bytardag/static/scss/: style.scss
bytardag/templates/: base.html  macros.html
bytardag/templates/auth/: login.html
bytardag/templates/main/: entry.html  index.html  list_sellers.html  missing_value.html  seller.html  sheet.html  status.html  verify.html  verify_sheet.html
bytardag/templates/user/: create.html  list.html
bytardag/user/: __init__.py  forms.py  routes.py
migrations/: env.py
migrations/versions/: 253be4b2f3a2_added_basic_seller_id_info.py  8152e6b1b94b_added_name_for_user.py  839e29065dc1_added_support_for_user_roles.py  864194dc07a1_initial_schema.py  a8ab43b5fdea_store_time_of_last_visit_for_users.py  f6d7cc086629_added_property_for_missing_value.py
tests/: conftest.py  test_basics.py  test_cli.py  test_model.py  test_sheet_registration.py
