[tool.poetry]
name = "bytardag"
version = "0.1.0"
description = "Web application for bytardag.se"
license = "GPL-3.0-or-later"
homepage = "https://github.com/Limpan/bytardag-pos"
repository = "https://github.com/Limpan/bytardag-pos"
authors = ["Linus Törngren <linus@etnolit.se>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-moment = "^0.10.0"
flask-sqlalchemy = "^2.4.4"
flask-wtf = "^0.14.3"
flask-login = "^0.5.0"
flask-migrate = "^2.5.3"
pendulum = "^2.1.2"
python-dotenv = "^0.14.0"
gunicorn = "^20.0.4"
sentry-sdk = {extras = ["flask"], version = "^0.17.7"}
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-flask = "^1.0.0"
pytest-cov = "^2.10.1"
coverage = {extras = ["toml"], version = "^5.3"}
flake8 = "^3.8.3"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
rope = "^0.17.0"

[tool.coverage.paths]
source = ["bytardag", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["bytardag"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
